tree-sitter-eon/test/corpus/basics.txt
==================
declarations and a map
==================

name = "demo"
cores = 4
server = {
  host = "localhost"
  workers = cores * 2
}

---

(source_file
  (declaration
    name: (identifier)
    value: (string))
  (declaration
    name: (identifier)
    value: (number))
  (declaration
    name: (identifier)
    value: (map
      (declaration
        name: (identifier)
        value: (string))
      (declaration
        name: (identifier)
        value: (binary_expression
          left: (identifier)
          right: (number))))))

==================
expression precedence and application
==================

value = map user.profile (transform value) + fallback default
negated = -(measure sample)

---

(source_file
  (declaration
    name: (identifier)
    value: (binary_expression
      left: (application_expression
        function: (identifier)
        argument: (field_expression
          value: (identifier)
          field: (identifier))
        argument: (parenthesized_expression
          (application_expression
            function: (identifier)
            argument: (identifier))))
      right: (application_expression
        function: (identifier)
        argument: (identifier))))
  (declaration
    name: (identifier)
    value: (unary_expression
      operand: (parenthesized_expression
        (application_expression
          function: (identifier)
          argument: (identifier))))))

==================
quoted keyword identifiers
==================

@"if" = 40
@"true" = 2
@"and" = @"if" + @"true"
@"quote\"name" = "line\n\"two\"\\"
quote = '\''

---

(source_file
  (declaration
    name: (identifier)
    value: (number))
  (declaration
    name: (identifier)
    value: (number))
  (declaration
    name: (identifier)
    value: (binary_expression
      left: (identifier)
      right: (identifier)))
  (declaration
    name: (identifier)
    value: (string))
  (declaration
    name: (identifier)
    value: (character)))

==================
boolean literals
==================

enabled = true
visible = enabled and false or true

---

(source_file
  (declaration
    name: (identifier)
    value: (boolean))
  (declaration
    name: (identifier)
    value: (binary_expression
      left: (binary_expression
        left: (identifier)
        right: (boolean))
      right: (boolean))))

==================
arrays
==================

inline = [1, base + 1, [true, false]]
multiline = [
  first,
  second,
]

---

(source_file
  (declaration
    name: (identifier)
    value: (array
      element: (number)
      element: (binary_expression
        left: (identifier)
        right: (number))
      element: (array
        element: (boolean)
        element: (boolean))))
  (declaration
    name: (identifier)
    value: (array
      element: (identifier)
      element: (identifier))))

==================
comments and semicolons
==================

// heading
first=1; second=first+1 // trailing

---

(source_file
  (comment)
  (declaration
    name: (identifier)
    value: (number))
  (declaration
    name: (identifier)
    value: (binary_expression
      left: (identifier)
      right: (number)))
  (comment))
